--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=z50fRAvjr9zGeEaj
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPORES_IN=90
 
 EMAIL_USERNAME=b62260032ae860
 EMAIL_PASSWORD=30b81aafddd3c2
